force-app/main/default/objects/ssot__RegulatoryTransactionFee__dlm/fields/ssot__CalculationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__CalculationDateTime__c</fullName>
    <label>Calculation Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CalculationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>