force-app/main/default/objects/ssot__RegulatoryTransactionFee__dlm/fields/ssot__RegulatoryTransactionFeeStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulatoryTransactionFeeStatus__c</fullName>
    <label>Regulatory Transaction Fee Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulatoryTransactionFeeStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>