force-app/main/default/objects/ssot__RegulatoryTransactionFee__dlm/fields/ssot__rel_1739512778804_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1739512778804_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulatoryTransactionFee_ParentRecor_rel</label>
    <referenceTo>ssot__RegulatoryCodeViolation__dlm</referenceTo>
    <relationshipLabel>RegulatoryTransactionFee_ParentRecor_rel</relationshipLabel>
    <relationshipName>rel_1739512778804_end</relationshipName>
    <type>Lookup</type>
</CustomField>