force-app/main/default/objects/ssot__RegulatoryTransactionFee__dlm/fields/ssot__rel_1739512780537_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1739512780537_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulatoryTransactionFee_AccountId_m_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>RegulatoryTransactionFee_AccountId_m_rel</relationshipLabel>
    <relationshipName>rel_1739512780537_end</relationshipName>
    <type>Lookup</type>
</CustomField>